frontend/deploy/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grepmind-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grepmind-frontend
  template:
    metadata:
      labels:
        app: grepmind-frontend
    spec:
      containers:
        - name: frontend
          image: srikanta1219/grepmind-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: grepmind-frontend
spec:
  selector:
    app: grepmind-frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort # Or LoadBalancer if in cloud
