frontend/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grepmind-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grepmind.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grepmind-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: grepmind-backend
                port:
                  number: 5000
